feat(external-service-service): created new external service
added new ext service and connected through rest datasource

BREAKING CHANGE:
external service

-31
